@@ -1,3 +1,7 @@
+20140419 - fhabermann
+* added config values for register
+* added register form and menu items
+
 20140319 - fhabermann
 * added flexible sidebar layout (Closes #27)
 
